--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,17 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'aspnetcoredocker'
+    repository: 'amolbhawari/coreveersionone'
+    command: 'buildAndPush'
+    Dockerfile: '**/Dockerfile'
+    tags: 'latest'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'coreversion1'
+    publishLocation: 'Container'
